# goit-pythonweb-hw-12

./: .env.example  .testenv  Dockerfile  README.md  docker-compose.yml  entrypoint.sh  main.py  pyproject.toml
docs/: conf.py  index.rst
migrations/: env.py  metadata.py
migrations/versions/: 2c7caa7d77ce_ensure_users_table.py  4a8bd88c96f1_add_roles.py  7564675327e8_init.py  a5455d52f524_change_datetime_to_date_in_birthdays.py  b5f1aebf2392_add_refresh_token_to_users.py
src/conf/: config.py
src/database/: db.py  models.py
src/repository/: contacts.py  users.py
src/routes/: auth.py  contacts.py  users.py  utils.py
src/schemas/: contacts.py  users.py
src/services/: auth.py  contacts.py  email.py  roles.py  upload_file.py  users.py
src/services/templates/: change_password.html  email_template.html
tests/: confest.py  conftest.py  factories.py  test_contacts_repository_unit.py
tests/integration/: conftest.py  test_auth.py  test_contacts.py  test_integration_auth.py  test_users.py
tests/unit/: test_users_repository_unit.py
